--- a/package.json
+++ b/package.json
@@ -31,20 +31,19 @@
     "postcss-pxtorem": "^6.0.0",
     "sass": "^1.49.0",
     "webpack": "^5.21.2",
-    "webpack-cli": "^4.9.1",
-    "webpack-stream": "^7.0.0"
+    "webpack-cli": "^4.9.1"
   },
   "browserslist": [
     "last 3 version"
   ],
   "dependencies": {
     "@wordpress/dom-ready": "^3.8.0",
+    "@wordpress/element": "^4.15.0",
+    "@wordpress/i18n": "^4.17.0",
     "ace-builds": "^1.10.0",
     "emmet-core": "^1.0.0",
-    "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^18.2.0",
     "react-select": "^5.4.0"
   }
 }
