Copied from test server

--- a/composer.json
+++ b/composer.json
@@ -6,26 +6,22 @@
 		"psr-4": {
 			"DevKit\\Layouts\\" : "includes",
 			"DevKit\\Layouts\\Compatibility\\" : "Compatibility",
-			"DevKit\\Layouts\\Partials\\" : "Partials"
+			"DevKit\\Layouts\\Components\\" : "Components",
+			"DevKit\\Layouts\\Blocks\\" : "Blocks"
 		}
 	},
 	"classmap": [
 		"devkit-layout-engine.php"
 	],
 	"require": {
-		"timber/timber": "^1.19",
-		"wpcl/wpconsole": "^1.0",
-		"twig/cache-extra": "^3.4",
-		"scssphp/scssphp": "^1.10",
-		"padaliyajay/php-autoprefixer": "^1.4"
-	},
-	"scripts": {
-		"post-install-cmd": "npm install",
-		"post-update-cmd": "npm install"
-	},
+		"timber/timber": "^2.0"
+    },
 	"config": {
 		"allow-plugins": {
 			"composer/installers": true
+		},
+		"platform": {
+			"php": "7.4.1"
 		}
-	}
+    }
 }
